--- a/public/sass/dashboard.scss
+++ b/public/sass/dashboard.scss
@@ -1,14 +1,17 @@
 /*
  * Base structure
  */
+
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
 }
 
+
 /*
  * Global add-ons
  */
+
 .sub-header {
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
@@ -25,6 +28,7 @@ body {
 /*
  * Sidebar
  */
+
 /* Hide for mobile, show later */
 .sidebar {
   display: none;
@@ -35,84 +39,115 @@ body {
   z-index: 1000;
   padding: 20px;
   overflow-x: hidden;
-  overflow-y: auto;
-  /* Scrollable contents if viewport is shorter than content. */
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   background-color: #f5f5f5;
   border-right: 1px solid #eee;
-}
-@media (min-width: 768px) {
-  .sidebar {
+
+  @media (min-width: 768px) {
+
     display: block;
   }
+
 }
 
-@media (max-width: 768px) {
-  .row-offcanvas-left.active {
+
+
+
+@media (max-width: 768px){
+
+  .row-offcanvas-left.active{
     left: 70%;
   }
 
-  .active .sidebar {
-    display: block;
-    position: static;
+  .sidebar{
+    .active &{
+      display: block;
+      position: static;
+    }
   }
-}
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px;
-  /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active a,
-.nav-sidebar > .active a:hover,
-.nav-sidebar > .active a:focus {
-  color: #fff;
-  background-color: #428bca;
+
+
+
 }
 
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+
+  > li > a {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  > .active{
+    a,
+    a:hover,
+    a:focus{
+      color: #fff;
+      background-color: #428bca;
+    }
+
+  }
+
+}
+
+
 /* Sidebar toggle */
-.btn-toggle-offcanvas .btn {
-  float: none;
+.btn-toggle-offcanvas{
+
+  .btn{
+    float: none;
+  }
+
+  .icon-bar{
+    background: #000000;
+  }
 }
-.btn-toggle-offcanvas .icon-bar {
-  background: #000000;
-}
+
 
 /*
  * Main content
  */
+
 .main {
   padding: 20px;
-}
-@media (min-width: 768px) {
-  .main {
+
+  @media (min-width: 768px) {
     padding-right: 40px;
     padding-left: 40px;
   }
+
+  .page-header {
+    margin-top: 0;
+  }
+
+  &.active{
+
+  }
 }
-.main .page-header {
-  margin-top: 0;
-}
+
 
 /*
  * Placeholder dashboard ideas
  */
+
 .placeholders {
   margin-bottom: 30px;
   text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
+
+  h4 {
+    margin-bottom: 0;
+  }
 }
 
 .placeholder {
   margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
+
+  img {
+    display: inline-block;
+    border-radius: 50%;
+  }
 }
