--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -37,13 +37,16 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   /* Scrollable contents if viewport is shorter than content. */
-  background-color: #f5f5f5;
+  background-color: #333333;
   border-right: 1px solid #eee;
 }
 @media (min-width: 768px) {
   .sidebar {
     display: block;
   }
+}
+.sidebar h4 {
+  color: #666;
 }
 
 @media (max-width: 768px) {
@@ -115,4 +118,39 @@ body {
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
+}
+
+.userAddbtn {
+  color: #428bca;
+}
+
+.fa {
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.userPageHeader {
+  border: none;
+}
+
+.btnEdit {
+  float: left;
+  background: none;
+}
+
+.checkboxUserPage {
+  width: 20px;
+  float: left;
+}
+
+.btnSelectUsers {
+  margin-right: 30px;
+  background: none;
+}
+
+.btn-toolbar {
+  margin-bottom: 20px;
 }
