On user page Deselect all and Select all buttons added with functionality + paging in the table

--- a/public/sass/dashboard.scss
+++ b/public/sass/dashboard.scss
@@ -211,10 +211,12 @@ body {
   width: 20px;
   float:left;
 }
-.btnSelectUsers
+.btnSelectUsers, .btnDeselectusers
 {
-  margin-right: 30px;
   background: none;
+}
+.btnDeselectusers{
+  margin-right: 30px;
 }
 .btn-toolbar
 {
