--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -164,9 +164,12 @@ body {
   float: left;
 }
 
-.btnSelectUsers {
-  margin-right: 30px;
+.btnSelectUsers, .btnDeselectusers {
   background: none;
+}
+
+.btnDeselectusers {
+  margin-right: 30px;
 }
 
 .btn-toolbar {
