--- a/public/sass/dashboard.scss
+++ b/public/sass/dashboard.scss
@@ -211,11 +211,11 @@ body {
   width: 20px;
   float:left;
 }
-.btnSelectUsers, .btnDeselectusers
+.btnSelectAll, .btnDeselectAll
 {
   background: none;
 }
-.btnDeselectusers{
+.btnDeselectAll{
   margin-right: 30px;
 }
 .btn-toolbar
