--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -49,14 +49,6 @@ body {
   color: #666;
   margin-bottom: 5px;
 }
-.sidebar ul li a div {
-  margin-left: 30px;
-  width: 155px;
-  position: absolute;
-  float: left;
-  color: #ffffff;
-  line-height: 18px;
-}
 .sidebar ul li a i {
   font-size: 18px;
   float: left;
@@ -89,6 +81,23 @@ body {
 }
 .listItem:hover i {
   color: #000000;
+}
+
+.sidebar_hasIcon {
+  margin-left: 30px;
+  width: 155px;
+  position: absolute;
+  float: left;
+  color: #ffffff;
+  line-height: 18px;
+}
+
+.sidebar_noIcon {
+  margin-left: 30px;
+  width: 155px;
+  float: left;
+  color: #ffffff;
+  line-height: 18px;
 }
 
 /* Sidebar navigation */
