--- a/public/sass/dashboard.scss
+++ b/public/sass/dashboard.scss
@@ -250,6 +250,10 @@ body {
   float:left;
   background: none;
 }
+.first_row_of_table
+{
+  width: 80px;
+}
 .checkboxPage
 {
   width: 20px;
@@ -271,5 +275,12 @@ body {
 {
   width: 100%;
 }
+.create_edit_back_btn
+{
+  a button{
+    margin-top: 0px;
+    margin-bottom: 30px;
+  }
 
+}
 
