--- a/public/css/cms.css
+++ b/public/css/cms.css
@@ -21,10 +21,12 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto;
-    /* Scrollable contents if viewport is shorter than content. */
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
+}
+a.status-1 {
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=cms.css.map */
