--- a/assets/sass/cms.scss
+++ b/assets/sass/cms.scss
@@ -29,3 +29,23 @@ body {
 a.status-1{
   font-weight: bold;
 }
+
+//generated crud views
+.Addbtn:hover{
+  text-decoration: none;
+}
+
+.first_row_of_table{
+  width: 80px;
+  overflow: hidden;
+  > *{
+    display: block;
+    float: left;
+    margin-right: 5px;
+  }
+}
+
+
+form{
+  padding: 10px 0;
+}
